test_outputs/connlist/cudn_test_3_connlist_output.txt
Permitted connectivity analyzed in Pod network:
0.0.0.0-255.255.255.255[External] => yellow-namespace/yellow[VirtualMachine] : All Connections
yellow-namespace/yellow[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections

Permitted connectivity analyzed in primary CUDN entire-cluster-cudn:
0.0.0.0-255.255.255.255[External] => blue-namespace/blue[VirtualMachine] : All Connections
0.0.0.0-255.255.255.255[External] => green-namespace/green[VirtualMachine] : All Connections
0.0.0.0-255.255.255.255[External] => red-namespace/red[VirtualMachine] : All Connections
blue-namespace/blue[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
blue-namespace/blue[VirtualMachine] => green-namespace/green[VirtualMachine] : All Connections
blue-namespace/blue[VirtualMachine] => red-namespace/red[VirtualMachine] : All Connections
green-namespace/green[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
green-namespace/green[VirtualMachine] => blue-namespace/blue[VirtualMachine] : All Connections
green-namespace/green[VirtualMachine] => red-namespace/red[VirtualMachine] : All Connections
red-namespace/red[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
red-namespace/red[VirtualMachine] => blue-namespace/blue[VirtualMachine] : All Connections
red-namespace/red[VirtualMachine] => green-namespace/green[VirtualMachine] : All Connections
